# pyosMeta

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/pyosmeta/: __init__.py  contributors.py  file_io.py  parse_issues.py
src/pyosmeta/cli/: parse_history.py  process_reviews.py  update_contributors.py  update_review_teams.py
